# fund_manager

./: .env.example  .gitignore  PLAN.md  README-SETUP.md  README.md  SERVER_STARTUP.md  SERVER_STARTUP_GUIDE.md  demo_market_maker.ipynb  docker-compose.demo.yml  docker-compose.yml
backend/: BUG_FIXES_COMPLETED.md  Dockerfile  README.md  TEST_REPORT.md  init_db.py  migrate_currency.py  migrate_data.py  migrate_investor_cumulative.py  migrate_investor_snapshots.py  pyproject.toml  requirements.txt  start.sh  test_api.py  test_case_1.py  test_cases_comprehensive.py
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  funds.py  investors.py  operation_history.py
backend/app/models/: __init__.py  admin.py  fund.py  investor.py  investor_return_snapshot.py  operation.py
backend/app/repositories/: __init__.py  fund_repo.py  investor_repo.py  operation_repo.py
backend/app/schemas/: __init__.py  auth.py  common.py  fund.py  investor.py  operation.py
backend/app/services/: __init__.py  auth_service.py  fund_service.py  investor_service.py  operation_history_service.py
backend/migrations/: 001_migrate_data.py  005_migrate_tags.py
backend/migrations/000_migrate_old_records/: batch_convert_funds.py  batch_import_funds.py  delete_all_funds.py
backend/migrations/000_migrate_old_records/utils/: manage.py  test_manage.py
data/: MM.2026-02-28.pkl
docs/: API-DESIGN.md  BACKEND_CAPABILITIES.md  DATA_IMPORT_EXPORT_DESIGN.md  DEPLOY.md  FRONTEND_DESIGN.md  IMPORT_EXPORT_TODO.md  TODO_LIST.md
frontend/: .env.example  .eslintrc.cjs  .prettierrc  Dockerfile  (+12 more)
(+28 files in other folders)
